--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@
          }
     form{
     display: inline;
+    margin-left:100px;
     }
     li a.active {
       background-color: #4CAF50;
@@ -65,4 +66,23 @@
     text-align: center;
     font-size: 37px;
     color: #555;
+    }
+    table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+    }
+    
+    td, th {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+    }
+    
+    tr:nth-child(even) {
+      background-color: #dddddd;
+    }
+    .content{
+      margin-top: 10px;
+      margin-left:100px;
     }
