--- a/style.css
+++ b/style.css
@@ -86,3 +86,30 @@
       margin-top: 10px;
       margin-left:100px;
     }
+    .autocomplete-items {
+      position: absolute;
+      border: 1px solid #d4d4d4;
+      border-bottom: none;
+      border-top: none;
+      z-index: 99;
+      top: 40px;
+      left: 0;
+      right: 0;
+    }
+    .autocomplete-items div {
+      padding: 10px;
+      cursor: pointer;
+      background-color: #fff; 
+      border-bottom: 1px solid #d4d4d4; 
+    }
+    .autocomplete-items div:hover {
+      background-color: #e9e9e9;  
+    }
+  
+    .autocomplete-active {
+      background-color: DodgerBlue !important;     
+      color: #ffffff; 
+    
+    }
+    
+    
