--- a/style.css
+++ b/style.css
@@ -38,6 +38,16 @@
       background-color: #f1f1f1;
     }
     
+.autocomplete-items{
+  word-wrap: normal;
+  position:absolute;
+  text-overflow: inherit;
+   padding-left:99px; 
+  border:1px solid;
+  text-align: left;
+  }
+  
+    
     li a {
       display: block;
       color: #000;
@@ -82,6 +92,10 @@
     tr:nth-child(even) {
       background-color: #dddddd;
     }
+    tr:nth-child(odd) {
+      background-color: cornflowerblue;
+    }
+
     .content{
       margin-top: 10px;
       margin-left:100px;
